--- a/index.html
+++ b/index.html
@@ -12,8 +12,46 @@
         <div class="wrapper">
             <h1 class="wrapper__text">Roll Color Dice</h1>
             <div class="choices">
-                <div class="choices__number">4 DICE</div>
-                <div class="choices__type">COLOR DICE</div>
+                <select class="choices__number">
+                    <option value="1">1 DIE</option>
+                    <option value="2">2 DICE</option>
+                    <option value="3">3 DICE</option>
+                    <option value="4">4 DICE</option>
+                    <option value="5">5 DICE</option>
+                    <option value="6">6 DICE</option>
+                    <option value="7">7 DICE</option>
+                    <option value="8">8 DICE</option>
+                    <option value="9">9 DICE</option>
+                    <option value="10">10 DICE</option>
+                    <option value="11">11 DICE</option>
+                    <option value="12">12 DICE</option>
+                    <option value="13">13 DICE</option>
+                    <option value="14">14 DICE</option>
+                    <option value="15">15 DICE</option>
+                    <option value="16">16 DICE</option>
+                    <option value="17">17 DICE</option>
+                    <option value="18">18 DICE</option>
+                    <option value="19">19 DICE</option>
+                    <option value="20">20 DICE</option>
+                    <option value="21">21 DICE</option>
+                    <option value="22">22 DICE</option>
+                    <option value="23">23 DICE</option>
+                    <option value="24">24 DICE</option>
+                    <option value="25">25 DICE</option>
+                    <option value="26">26 DICE</option>
+                    <option value="27">27 DICE</option>
+                    <option value="28">28 DICE</option>
+                    <option value="29">29 DICE</option>
+                </select>
+                <select class="choices__type">
+                    <option value="4">4-SIDED</option>
+                    <option value="6">6-SIDED</option>
+                    <option value="8">8-SIDED</option>
+                    <option value="10">10-SIDED</option>
+                    <option value="12">12-SIDED</option>
+                    <option value="20">20-SIDED</option>
+                    <option value="colordice">COLOR DICE</option>
+                </select>
             </div>
             <div class="dices__container">
                 <div class="dices dice--1">
