new update 2.1 - added logo [Bug fixed]

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Color Dice</title>
+    <title>Online Dice - Virtual Dice Roller</title>
+    <link rel="icon" href="img/512x512.png" type="icon">
 </head>
+
 <body>
     <div class="container">
         <div class="container__logo"><img src="img/logo.png" alt="" class="image__logo"></div>
@@ -69,12 +72,14 @@
             </div>
             <div class="roll-again">
                 <a class="roll-again__text">
-                Roll Again !
+                    Roll Again !
                 </a>
             </div>
             <div class="notice">
                 <h1>Possible colors are: <span class="red">Red</span>, <span class="orange">Orange</span>,
-                <span class="yellow">Yellow</span>, <span class="green">Green</span>, <span class="blue">Blue</span>, and <span class="purple">Purple</span>.</h1>
+                    <span class="yellow">Yellow</span>, <span class="green">Green</span>, <span
+                        class="blue">Blue</span>, and <span class="purple">Purple</span>.
+                </h1>
             </div>
         </div>
     </div>
@@ -105,4 +110,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
